# children-story-generator

./: .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  config.py  exceptions.py  image_generation.py  routes.py  story_generation.py  utils.py
app/generators/: __init__.py  image_generation.py  story_generation.py
app/services/: story_service.py  validation_service.py
web/: index.html  styles.css
